@@ -4,7 +4,8 @@ import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import java.util.List;
+
+import java.util.Arrays;
 
 @Configuration
 public class SwaggerConfig {
@@ -12,9 +13,10 @@ public class SwaggerConfig {
     @Bean
     public OpenAPI customerOpenAPI() {
         return new OpenAPI()
-                // You need to change the port as per your server
-                .servers(List.of(
-                        new Server().url("https://9271.pro604cr.amypo.ai/")
-                ));
-        }
+                .servers(
+                        Arrays.asList(
+                                new Server().url("https://9271.pro604cr.amypo.ai/")
+                        )
+                );
+    }
 }
